--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,9 @@
         <activity android:name=".appcontrol_ui.activity_settings" />
         <activity android:name=".appcontrol_ui.activity_pin" />
         <activity android:name=".appcontrol_ui.activity_entry" />
-        <activity android:name=".ui_data.fragmentHome.activity_home" />
+        <activity android:name=".ui_data.fragment_Home.activity_home" />
+        <activity android:name=".ui_data.diary.activity_diary" />
+        <activity android:name=".ui_data.diary.activity_add_diary_content" />
     </application>
 
 </manifest>
