--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,8 +66,11 @@
         <activity android:name=".appcontrol_ui.activity_pin" />
         <activity android:name=".appcontrol_ui.activity_entry" />
         <activity android:name=".ui_data.fragment_Home.activity_home" />
-        <activity android:name=".ui_data.diary.activity_diary" />
-        <activity android:name=".ui_data.diary.activity_add_diary_content" />
+        <activity android:name=".ui_data.diary.activity_diary_content" />
+        <activity android:name=".ui_data.diary.activity_diary_content_pages" />
+        <activity android:name=".ui_data.diary.activity_show_diary_page" />
+        <activity android:name=".ui_data.diary.activity_add_diary" />
+
     </application>
 
 </manifest>
